Thu May 31 02:01:31 BST 2007  Olly Betts <olly@survex.com>

	* backends/dbfactory_remote.cc,backends/remote/remote-database.cc,
	  common/progclient.h,common/remote-database.h,common/tcpclient.h,
	  net/progclient.cc: Stop a non-writable remote database from calling
	  dtor_called() when it is destroyed, since that causes MSG_FLUSH to
	  be sent to the server (fixes bug#149).

Wed May 30 19:47:43 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* include/xapian/query.h: New accessor method
	  Xapian::Query::Internal::get_parameter().
	* queryparser/queryparser.lemony: Multiple boolean prefixed terms
	  with the same term prefix are now combined with OR before such
	  groups are combined with AND.  Similarly for multiple value ranges
	  on the same value (fixes bug#157).
	* include/xapian/queryparser.h: Document new handling of multiple
	  boolean prefixed terms.
	* tests/queryparsertest.cc: Testcases for new handling of multiple
	  boolean prefixed terms and value ranges.

Wed May 30 14:45:19 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/deprecation.rst: Update comment about QueryParserError to
	  point out that you'll need to compile conditionally to work with
	  0.9.x

Wed May 30 14:33:29 BST 2007  Olly Betts <olly@survex.com>

	* NEWS: Update.  Put all the subheadings in the standard order used
	  for previous releases.

Wed May 30 12:58:01 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* include/xapian/database.h,api/omdatabase.cc,backends/flint/,
	  backends/inmemory/,backends/quartz/,
	  backends/remote/remote-database.cc,
	  common/database.h,common/remote-database.h,common/remoteprotocol.h,
	  net/remoteserver.cc: Add a prefixed form of allterms_begin() and
	  allterms_end(), which allows efficient iteration over only those
	  terms which begin with the given prefix.  Requires bumping the
	  remote protocol minor version number, but doesn't change any
	  database formats.