@@ -1,3 +1,10 @@
+Thu May 31 03:04:42 BST 2007  Olly Betts <olly@survex.com>
+
+	* backends/flint/flint_database.cc,backends/quartz/quartz_database.cc:
+	  Check if the docid counter wraps and if it does throw DatabaseError
+	  (fixes bug#152).
+	* tests/api_wrdb.cc: Add regression test (nomoredocids1).
+
 Thu May 31 02:01:31 BST 2007  Olly Betts <olly@survex.com>
 
 	* backends/dbfactory_remote.cc,backends/remote/remote-database.cc,
